--- a/sneaky.cbp
+++ b/sneaky.cbp
@@ -325,6 +325,8 @@
 		<Unit filename="src/sneaky/GameObject.cpp" />
 		<Unit filename="src/sneaky/GameObject.h" />
 		<Unit filename="src/sneaky/GameState.h" />
+		<Unit filename="src/sneaky/GuardBrain.cpp" />
+		<Unit filename="src/sneaky/GuardBrain.h" />
 		<Unit filename="src/sneaky/GuardLocalSensor.h" />
 		<Unit filename="src/sneaky/HighScoreList.cpp" />
 		<Unit filename="src/sneaky/HighScoreList.h" />
