Separated NavMesh from Navigation.h, added Clipper to 3rdparty/.

--- a/sneaky.cbp
+++ b/sneaky.cbp
@@ -330,6 +330,8 @@
 		<Unit filename="src/sneaky/HighScoreList.h" />
 		<Unit filename="src/sneaky/Input.cpp" />
 		<Unit filename="src/sneaky/Input.h" />
+		<Unit filename="src/sneaky/NavMesh.cpp" />
+		<Unit filename="src/sneaky/NavMesh.h" />
 		<Unit filename="src/sneaky/Navigation.cpp" />
 		<Unit filename="src/sneaky/Navigation.h" />
 		<Unit filename="src/sneaky/Physics.h" />
