Added tiny poly partition to replace the buggy poly2tri.
Now using tiny poly partition (TPP) to triangulate the navmesh with simple
ear clipping algorithm. The ear clipping can result in bad triangles (long and
thin), so a refinement step is done to the resulting triangulation.

Improved the NavMesh::FindNodePath to use edge midpoints instead of face
centers to calculate the cost.

--- a/sneaky.cbp
+++ b/sneaky.cbp
@@ -59,7 +59,8 @@
 			<Add directory="src" />
 			<Add directory="3rdparty/liquidfun/Box2D" />
 			<Add directory="3rdparty/Clipper" />
-			<Add directory="3rdparty/poly2tri/poly2tri/" />
+			<Add directory="3rdparty/poly2tri/poly2tri" />
+			<Add directory="3rdparty/polypartition" />
 		</Compiler>
 		<Linker>
 			<Add option="-lmingw32" />
@@ -194,6 +195,8 @@
 		<Unit filename="3rdparty/poly2tri/poly2tri/sweep/sweep.h" />
 		<Unit filename="3rdparty/poly2tri/poly2tri/sweep/sweep_context.cc" />
 		<Unit filename="3rdparty/poly2tri/poly2tri/sweep/sweep_context.h" />
+		<Unit filename="3rdparty/polypartition/polypartition.cpp" />
+		<Unit filename="3rdparty/polypartition/polypartition.h" />
 		<Unit filename="TODO.txt" />
 		<Unit filename="src/rob/Assert.cpp" />
 		<Unit filename="src/rob/Assert.h" />
